# whitebox_next_gen

./: .gitignore  Cargo.toml  EULA_PRO.md  PROJECT_SCOPE.md  README.md  REMOTE_SENSING_IMAGE_TOOLS_METADATA.md  REMOTE_SENSING_TOOLS_INVENTORY_SUMMARY.md  SPATIAL_STATISTICS_COMPREHENSIVE_AUDIT_2026-06-04.md  SPATIAL_STATS_TOOL_EXPOSURE_ANALYSIS_2026-06-04.md  TOOL_INVENTORY_WBT_OSS.md  VECTOR_TOOLS_DOCUMENTATION_AUDIT.md  generate_r_wrappers_spatial_stats.py  kriging_synthetic_validation.json  parse_output.txt  parse_wbw.py  reset_plugin_settings.py  test_buffer_dissolve.py  test_hfa_tier_b.rs  test_spatial_stats.py  test_spatial_stats_cli.sh  tool_catalog_audit_summary_2026-05-13.md  tool_desc.txt  wbw_python_runtime_call_audit_2026-05-13.json
crates/wbgeostats/: API.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  PERFORMANCE.md  pyproject.toml
crates/wbgeostats/src/: lib.rs  python.rs  r.rs
crates/wbgeostats/wbgeostats/: __init__.py
crates/wbphotogrammetry/: Cargo.toml  README.md
crates/wbphotogrammetry/examples/: check_dataset_matrix_gates.py  compare_dataset_reports.py  compare_profile_reports.py  feature_pair_probe.rs  profile_pipeline.rs  run_dataset_matrix.py  run_dataset_pipeline.rs  run_profile_benchmark.sh
crates/wbphotogrammetry/src/: error.rs  lib.rs
crates/wbprojection/: CHANGELOG.md  Cargo.toml  README.md
crates/wbprojection/benches/: simd_benchmarks.rs
crates/wbprojection/dev/: EPSG_WORKFLOWS_PARITY_REPORT.md  EPSG_WORKFLOWS_PRIORITY_SHORTLIST.md  batch_runner.py  insert_polar.py  remaining_methods.py
crates/wbprojection/examples/: simd_batch_transform.rs
crates/wbprojection/src/: compound_crs.rs  crs.rs  datum.rs  epsg.rs  grid_formats.rs  grid_shift.rs  lib.rs  transform.rs
crates/wbraster/: CHANGELOG.md  Cargo.toml  README.md
crates/wbraster/benches/: raster_access.rs  simd_statistics.rs
crates/wbraster/dev/: jpeg2000_diff_fixtures.txt  jpeg2000_diff_report_sentinel2_baseline.json  jpeg2000_diff_report_sentinel2_chunk_e.json  jpeg2000_diff_report_sentinel2_chunk_f.json  jpeg2000_native_recovery_plan.md  jpeg2000_porting_audit.md  output.asc  run_jpeg2000_parity_matrix.sh
crates/wbraster/examples/: README.md  esri_ascii_io.rs  geopackage_io.rs  geotiff_cog_io.rs  raster_basics.rs  reproject_io.rs  simd_stats_benchmark.rs  simd_stats_compute.rs  test_hfa_tier_b.rs  zarr_io.rs
crates/wbraster/src/: crs_info.rs  lib.rs  memory_store.rs  raster.rs
crates/wbraster/tests/: integration.rs  reprojection_parity.rs  scalar_api_contract.rs
crates/wbspatialstats/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/wbspatialstats/src/: __init__.py  lib.rs  python.rs  r.rs
crates/wbspatialstats/tests/: phase1_benchmarks.rs
crates/wbtools_oss/: CHANGELOG.md  Cargo.toml  OSM_ONLINE_VECTOR_DOWNLOAD_TOOL_DESIGN_2026-05-12.md  README.md
crates/wbtools_oss/benches/: bilateral_filters_bench.rs  feature_preserving_smoothing_bench.rs  geomorphons_bench.rs  individual_tree_segmentation_bench.rs  network_phase1_bench.rs  rank_filters_bench.rs
crates/wbtools_oss/docs/: REMOTE_SENSING_TOOL_SPRINT_PLAN_2026-05-12.md
crates/wbtools_oss/examples/: run_tool.rs
crates/wbtools_oss/src/: lib.rs
crates/wbtools_oss/tests/: mississauga_performance.rs  registry_integration.rs
crates/wbtopology/: CHANGELOG.md  Cargo.toml  README.md
crates/wbtopology/benches/: hull_bench.rs  spatial_index_bench.rs
crates/wbtopology/docs/: BUFFER_DISSOLVE_GEOS_PARITY_PLAN_2026-05-07.md  BUFFER_VECTOR_POSTMORTEM_AND_ROADMAP_2026-05-07.md  BUFFER_VECTOR_REIMPLEMENTATION_PLAYBOOK_2026-05-11.md  REMAINING_GAPS_WORKPLAN_2026-05-06.md  TIER3_EXECUTION_PLAN_2026-05-06.md  WBTOPOLOGY_SPRINT_RESTART_STARTING_POINT_2026-05-12.md
crates/wbtopology/examples/: vector_interop.rs
crates/wbtopology/src/: buffer_op.rs  constructive.rs  fast_triangulation.rs  graph.rs  hull.rs  lib.rs  natural_neighbour.rs  noding.rs  overlay.rs  precision.rs  relate.rs  topology.rs
crates/wbtopology/tests/: buffer_builder_graph_fixture_harness_tests.rs  buffer_builder_graph_pipeline_tests.rs  buffer_geos_parity_harness_tests.rs  buffer_negative_fixture_tests.rs  buffer_op_pipeline_tests.rs  buffer_positive_fixture_tests.rs  constructive_tests.rs  de9im_differential_harness_tests.rs  distance_tests.rs  graph_tests.rs  hull_fixture_tests.rs  hull_tests.rs  io_tests.rs  make_valid_geometry_fixture_harness_tests.rs  multi_geometry_tests.rs  noding_tests.rs  overlay_fixture_corpus_tests.rs  overlay_fixture_extreme_diagnostics_tests.rs  overlay_randomized_invariants_tests.rs  overlay_tests.rs  overlay_unary_dissolve_cascaded_tests.rs  overlay_unary_dissolve_graph_tests.rs  polygonize_linework_diagnostics_tests.rs  precision_tests.rs  relate_tests.rs  simplify_tests.rs  spatial_index_tests.rs  topology_tests.rs  triangulation_tests.rs  unary_dissolve_graph_fixture_harness_tests.rs  vector_io_tests.rs  voronoi_tests.rs
crates/wbvector/: CHANGELOG.md  Cargo.toml  README.md
crates/wbvector/docs/: TOPOJSON_READ_WRITE_IMPLEMENTATION_PLAN_2026-05-12.md
crates/wbvector/examples/: convert.rs  flatgeobuf_io.rs  geojson_io.rs  geopackage_io.rs  geoparquet_io.rs  gml_io.rs  gpx_io.rs  kml_io.rs  kmz_io.rs  mapinfo_io.rs  osmpbf_io.rs  reproject_io.rs  shapefile_io.rs  topojson_io.rs
crates/wbvector/src/: error.rs  feature.rs  lib.rs  reproject.rs
crates/wbw_python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TOOLS.md  benchmark.py  pyproject.toml  tool_taxonomy.resolved.json  tool_taxonomy.toml
crates/wbw_python/docs/: api_redesign_rfc_draft.md  data_object_api_harmonization_proposal.md  flow_algorithms_parity_checklist.md  full_porting_reconciliation_report_2026_03_24.md  hydrology_diagnostics_parity_checklist.md  hydrology_parity_checklist.md  lidar_individual_tree_segmentation_design.md  lidar_parity_checklist.md  math_porting_parity_report.md  programming.code-workspace  stream_network_parity_checklist.md  tools_agriculture.md  tools_data_tools.md  tools_geomorphometry.md  tools_gis.md  tools_hydrology.md  tools_math.md  (+5 more)
crates/wbw_r/: CHANGELOG.md  Cargo.toml  README.md  R_API_PARITY_PLAN.md
(+2022 files in other folders)
