[workspace]
members = [
  "crates/wbgeotiff",
  "crates/wbprojection",
  "crates/wbraster",
  "crates/wbvector",
  "crates/wblidar",
  "crates/wbtopology",
  "crates/wbcore",
  "crates/wblicense_core",
  "crates/wbtools_oss",
  "crates/wbw_python",
  "crates/wbw_r",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
