[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wbgeostats"
description = "Production-grade geostatistics library: kriging, variography, spatial inference"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Whitebox Geospatial Inc.", email = "support@whiteboxgeo.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["geostatistics", "kriging", "interpolation", "spatial", "gis"]

[project.urls]
Homepage = "https://github.com/jblindsay/whitebox"
Documentation = "https://docs.whiteboxgeo.com"
Repository = "https://github.com/jblindsay/whitebox"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "wbgeostats._core"
binding = "pyo3"
python-packages = ["wbgeostats"]
