[package]
name = "wbphotogrammetry"
version = "0.1.0"
edition = "2021"
authors = ["John Lindsay, Whitebox Geospatial Inc."]
description = "Pure-Rust photogrammetry primitives for drone SfM workflows."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
wbcore      = { path = "../wbcore" }
wbraster    = { path = "../wbraster" }
wbprojection = { path = "../wbprojection" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
nalgebra    = "0.34"
rayon       = "1"
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
kamadak-exif = "0.5"
