[package]
name = "wbraster"
version = "0.1.0"
edition = "2021"
authors = ["John Lindsay, Whitebox Geospatial Inc."]
description = "A pure-Rust library for reading and writing raster GIS formats"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jblindsay/whitebox_next_gen"
homepage = "https://github.com/jblindsay/whitebox_next_gen"
documentation = "https://docs.rs/wbraster"
exclude = ["dev/"]
keywords = ["gis", "raster", "geospatial", "grid", "remote-sensing"]
categories = ["science", "encoding", "filesystem"]

[lib]
name = "wbraster"
path = "src/lib.rs"

[features]
default = ["zstd-native"]
zstd-native = ["dep:zstd"]
zstd-pure-rust-decode = ["dep:ruzstd"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
zstd = { version = "0.13", optional = true }
ruzstd = { version = "0.8", optional = true }
lz4_flex = "0.11"
weezl = "0.1"
jpeg-encoder = "0.6"
jpeg-decoder = "0.3"
webp = "0.3"
png = "0.17"
zune-core = "0.5"
zune-jpegxl = "0.5"
jxl-oxide = "0.12"
thiserror = "1.0"
log = "0.4"
rayon = "1.10"
wide = "1.2"
wbprojection = { path = "../wbprojection", version = "0.1.0" }
wbgeotiff = { path = "../wbgeotiff", version = "0.1.0" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "raster_access"
harness = false

[[bench]]
name = "simd_statistics"
harness = false
