[package]
name = "wbspatialstats"
version = "0.1.0"
edition = "2021"
authors = ["John Lindsay", "Whitebox Geospatial <support@whiteboxgeo.com>"]
description = "Unified spatial statistics library: kriging, spatial autocorrelation, spatial regression"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jblindsay/whitebox"

[lib]
name = "wbspatialstats"
crate-type = ["rlib"]

[dependencies]
nalgebra = { version = "0.34", features = ["serde"] }
ndarray = { version = "0.15", features = ["serde"] }
rayon = "1.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
approx = "0.5"
rand = "0.8"

[features]
default = []
