[package]
name = "wbtools_oss"
version = "0.1.3"
edition = "2021"
authors = ["John Lindsay", "Whitebox Geospatial Inc."]
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []

[dependencies]
wbcore = { path = "../wbcore" }
serde.workspace = true
serde_json.workspace = true
wbraster = { path = "../wbraster" }
wbgeotiff = { path = "../wbgeotiff" }
wbvector = { path = "../wbvector" }
wbprojection = { path = "../wbprojection" }
wbtopology = { path = "../wbtopology", features = ["parallel"] }
wblidar = { path = "../wblidar", features = ["parallel"] }
wbspatialstats = { path = "../wbspatialstats" }
rayon = "1"
rand = "0.10.0"
wide = "1.2.0"
chrono = { version = "0.4", default-features = true }
image = "0.25"
kdtree = "0.8.0"
evalexpr = "13.1.0"
nalgebra = "0.34.1"
smartcore = { version = "0.4.9", features = ["serde"] }
bincode = { version = "2", features = ["serde"] }
rustfft = "6.2"
time = { version = "0.3", features = ["formatting", "parsing"] }
ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rank_filters_bench"
harness = false

[[bench]]
name = "bilateral_filters_bench"
harness = false

[[bench]]
name = "feature_preserving_smoothing_bench"
harness = false

[[bench]]
name = "geomorphons_bench"
harness = false

[[bench]]
name = "individual_tree_segmentation_bench"
harness = false

[[bench]]
name = "network_phase1_bench"
harness = false
