[package]
name = "wbw_python"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
name = "wbw_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pro = ["dep:wbtools_pro"]

[dependencies]
wbcore = { path = "../wbcore" }
wblicense_core = { path = "../wblicense_core" }
wbtools_oss = { path = "../wbtools_oss" }
wbtools_pro = { path = "../../../wbtools_pro", optional = true }
wbraster = { path = "../wbraster" }
wbprojection = { path = "../wbprojection" }
wbvector = { path = "../wbvector" }
wblidar = { path = "../wblidar" }
serde_json.workspace = true
pyo3 = { version = "0.28.2", features = ["macros"] }
