[package]
name = "wbw_python"
version = "2.0.2"
edition = "2021"
authors = ["John Lindsay, Whitebox Geospatial Inc."]
publish = false

[lib]
name = "wbw_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pro = ["dep:wbtools_pro"]

[dependencies]
wbcore = { path = "../wbcore" }
wblicense_core = { path = "../wblicense_core" }
wbtools_oss = { path = "../wbtools_oss" }
wbtools_pro = { path = "../wbtools_pro_shim", optional = true }
wbraster = { path = "../wbraster" }
wbprojection = { path = "../wbprojection" }
wbvector = { path = "../wbvector", features = ["geoparquet", "kmz", "osmpbf"] }
wblidar = { path = "../wblidar" }
wbtopology = { path = "../wbtopology" }
serde_json.workspace = true
pyo3 = { version = "0.28.2", features = ["macros", "abi3-py39"] }
ureq = { version = "2.12.1", features = ["json"] }
rayon = "1"
uuid = { version = "1.11", features = ["v4"] }
dirs = "5"
